--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=VT323&display=swap");
 /***
     The new CSS reset - version 1.11.3 (last updated 25.08.2024)
     GitHub page: https://github.com/elad2412/the-new-css-reset
@@ -122,6 +124,35 @@ display:revert; revert to element instead of attribute */
 }
 
 h1 {
-  font-size: 60px;
-  color: greenyellow;
+  font-family: "VT323", monospace;
+  font-size: 96px;
+  color: #0e103d;
+}
+
+h2 {
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 48px;
+  color: #9caf5e;
+}
+
+.ds-sprite {
+  width: 1920px;
+  height: 1920px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+  transform: scale(0.25); /* Scale it down to 480px visually */
+  transform-origin: top left;
+}
+
+@keyframes play-frames {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -13440px 0;
+  } /* 1920px × 7 frames */
+}
+.ds-sprite:hover {
+  animation: play-frames 1s steps(7) infinite;
 }/*# sourceMappingURL=style.css.map */
