scale down ds game cards

--- a/kac-portfolio/src/style/sass/_home.scss
+++ b/kac-portfolio/src/style/sass/_home.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-position: 0 0;
     cursor: pointer;
-    transform: scale(0.25); /* Scale it down to 480px visually */
+    transform: scale(0.153125);
     transform-origin: top left;
 }
 
