--- a/kac-portfolio/src/style/sass/_home.scss
+++ b/kac-portfolio/src/style/sass/_home.scss
@@ -1,32 +1,91 @@
-.ds-sprite {
-    width: 1920px;
-    height: 1920px;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    cursor: pointer;
-    transform: scale(0.153125);
-    transform-origin: top left;
+.home {
+    padding: 120px;
 }
 
-@keyframes play-frames {
-    from { background-position: 0 0; }
-    to { background-position: -13440px 0; } /* 1920px × 7 frames */
-}
-
-.ds-sprite:hover {
-    animation: play-frames 1s steps(7) infinite;
+.hero {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 35px;
 }
 
 .hero-text {
     h1 {
         font-family: "VT323", monospace;
         color: $navy;
-        font-size: 5vw;
+        font-size: 96px;
+        margin-bottom: 5px;
     }
     h2 {
         font-family: "Space Grotesk", sans-serif;
         color: $green;
-        font-size: 2.5vw;
+        font-size: 48px;
     }
 }
 
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(3deg); }
+    50% { transform: rotate(-3deg); }
+    75% { transform: rotate(3deg); }
+    100% { transform: rotate(0deg); }
+}
+.hero-image {
+    img {
+        width: 160px;
+        height: auto;
+        margin-top: -40px;
+        transition: transform 0.2s ease-in-out;
+        &:hover, &:focus {
+            animation: wiggle 0.5s forwards;
+        }
+    }
+}
+
+.learn-more-btn {
+    margin-top: 65px;
+    color: $navy;
+    font-family: "VT323", monospace;
+    font-size: 48px;
+    background-color: $white;
+    border-radius: 50px;
+    border: 3px solid $navy;
+    padding: 10px 60px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: fit-content;
+    transition: background-color 0.3s ease;
+    &:hover, &:focus {
+        background-color: $white-hover;
+    }
+}
+
+.image-links {
+    position: relative;
+    height: 350px;
+    .ds {
+        position: absolute;
+        right: 10vw;
+        top: -150px;
+    }
+}
+
+
+@keyframes play-frames {
+    from { background-position: 0 0; }
+    to { background-position: -2058px 0; }
+}
+.ds-sprite {
+    width: 294px;
+    height: 294px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    cursor: pointer;
+    transform: rotate(13.204deg);
+    transform-origin: top left;
+
+    &:hover {
+        animation: play-frames .75s steps(7) infinite;
+    }
+}
