--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=VT323&display=swap");
 /***
     The new CSS reset - version 1.11.3 (last updated 25.08.2024)
@@ -124,17 +123,87 @@ display:revert; revert to element instead of attribute */
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
 }
 
-.ds-sprite {
-  width: 1920px;
-  height: 1920px;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  cursor: pointer;
-  transform: scale(0.153125);
-  transform-origin: top left;
+.home {
+  padding: 120px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 35px;
+}
+
+.hero-text h1 {
+  font-family: "VT323", monospace;
+  color: #0e103d;
+  font-size: 96px;
+  margin-bottom: 5px;
+}
+.hero-text h2 {
+  font-family: "Space Grotesk", sans-serif;
+  color: #9caf5e;
+  font-size: 48px;
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(-3deg);
+  }
+  75% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+.hero-image img {
+  width: 160px;
+  height: auto;
+  margin-top: -40px;
+  transition: transform 0.2s ease-in-out;
+}
+.hero-image img:hover, .hero-image img:focus {
+  animation: wiggle 0.5s forwards;
+}
+
+.learn-more-btn {
+  margin-top: 65px;
+  color: #0e103d;
+  font-family: "VT323", monospace;
+  font-size: 48px;
+  background-color: #f5f5f5;
+  border-radius: 50px;
+  border: 3px solid #0e103d;
+  padding: 10px 60px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: -moz-fit-content;
+  width: fit-content;
+  transition: background-color 0.3s ease;
+}
+.learn-more-btn:hover, .learn-more-btn:focus {
+  background-color: #cbcfda;
+}
+
+.image-links {
+  position: relative;
+  height: 350px;
+}
+.image-links .ds {
+  position: absolute;
+  right: 10vw;
+  top: -150px;
 }
 
 @keyframes play-frames {
@@ -142,20 +211,18 @@ body {
     background-position: 0 0;
   }
   to {
-    background-position: -13440px 0;
-  } /* 1920px × 7 frames */
+    background-position: -2058px 0;
+  }
+}
+.ds-sprite {
+  width: 294px;
+  height: 294px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+  transform: rotate(13.204deg);
+  transform-origin: top left;
 }
 .ds-sprite:hover {
-  animation: play-frames 1s steps(7) infinite;
-}
-
-.hero-text h1 {
-  font-family: "VT323", monospace;
-  color: #0e103d;
-  font-size: 5vw;
-}
-.hero-text h2 {
-  font-family: "Space Grotesk", sans-serif;
-  color: #9caf5e;
-  font-size: 2.5vw;
+  animation: play-frames 0.75s steps(7) infinite;
 }/*# sourceMappingURL=style.css.map */
