nav bar styled, gameboy link to design page added & animated

--- a/kac-portfolio/src/style/sass/_colors.scss
+++ b/kac-portfolio/src/style/sass/_colors.scss
@@ -3,5 +3,6 @@ $blue: #70a0af;
 $pink: #e2b4bd;
 $purple: #69306d;
 $navy: #0e103d;
+$navy-hover: #252866;
 $white: #f5f5f5;
 $white-hover: #cbcfda;
