--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -252,12 +252,17 @@ body {
 }
 .image-links .ds {
   position: absolute;
-  right: 10vw;
-  top: -150px;
+  right: 9vw;
+  top: -250px;
 }
 .image-links .gameboy {
   position: absolute;
   right: 30vw;
+  top: 0px;
+}
+.image-links .wii {
+  position: absolute;
+  right: 30px;
   top: 90px;
 }
 
@@ -275,10 +280,10 @@ body {
   background-repeat: no-repeat;
   background-position: 0 0;
   cursor: pointer;
-  transform: rotate(13.204deg);
+  transform: rotate(11.204deg);
   transform-origin: top left;
 }
-.ds-sprite:hover {
+.ds-sprite:hover, .ds-sprite:focus {
   animation: play-frames-ds 0.85s steps(7) infinite;
 }
 
@@ -299,6 +304,23 @@ body {
   transform: rotate(-4.37deg);
   transform-origin: top left;
 }
-.gameboy-sprite:hover {
+.gameboy-sprite:hover, .gameboy-sprite:focus {
   animation: play-frames-gameboy 1.3s steps(8) infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.wii img {
+  width: 250px;
+  animation: spin 5s linear infinite;
+  animation-play-state: paused;
+}
+.wii img:hover, .wii img:focus {
+  animation-play-state: running;
 }/*# sourceMappingURL=style.css.map */
