--- a/kac-portfolio/src/style/style.scss
+++ b/kac-portfolio/src/style/style.scss
@@ -14,6 +14,7 @@ body {
     75% { transform: rotate(3deg); }
     100% { transform: rotate(0deg); }
 }
+
 .navbar {
     padding: 40px;
     padding-left: 60px;
@@ -26,6 +27,36 @@ body {
         justify-content: space-between;
         flex-direction: row;
         align-items: center;
+        .logo-link {
+            width: 80%;
+            height: auto;
+            .logo-wrapper {
+                position: relative;
+                width: fit-content;
+                .name-logo {
+                    width: 100%;
+                    display: block;
+                }
+                .logo-star {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    pointer-events: none;
+                    &.hover {
+                        opacity: 0;
+                    }
+                }
+            }
+            &:hover, &:focus {
+                .logo-star.hover {
+                    opacity: 1;
+                }
+                .logo-star:not(.hover) {
+                    opacity: 0;
+                }
+            }
+        }
         svg {
             color: $navy;
         }
