--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -145,6 +145,7 @@ body {
 }
 .navbar {
   padding: 40px;
+  padding-top: 20px;
   padding-left: 60px;
   padding-right: 60px;
   font-family: "Space Grotesk", sans-serif;
