--- a/kac-portfolio/src/style/style.scss
+++ b/kac-portfolio/src/style/style.scss
@@ -17,6 +17,7 @@ body {
 
 .navbar {
     padding: 40px;
+    padding-top: 20px;
     padding-left: 60px;
     padding-right: 60px;
     font-family: "Space Grotesk", sans-serif;
