--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -1,3 +1,11 @@
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(3deg); }
+    50% { transform: rotate(-3deg); }
+    75% { transform: rotate(3deg); }
+    100% { transform: rotate(0deg); }
+}
+
 .me-photos {
     .gameboy-frame-wrapper {
         position: relative;
@@ -43,7 +51,7 @@
                 svg {
                     color: $navy-hover;
                 }
-                transform: translateY(-50%) scale(1.1);
+                animation: wiggle 0.5s forwards;
             }
         }
     }
