--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -370,6 +370,23 @@ body {
   animation-play-state: running;
 }
 
+@keyframes wiggle {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(-3deg);
+  }
+  75% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 .me-photos .gameboy-frame-wrapper {
   position: relative;
   width: 400px;
@@ -414,7 +431,7 @@ body {
   right: 5px;
 }
 .me-photos .gameboy-frame-wrapper .arrow:hover, .me-photos .gameboy-frame-wrapper .arrow:focus {
-  transform: translateY(-50%) scale(1.1);
+  animation: wiggle 0.5s forwards;
 }
 .me-photos .gameboy-frame-wrapper .arrow:hover svg, .me-photos .gameboy-frame-wrapper .arrow:focus svg {
   color: #252866;
