--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -431,6 +431,7 @@ body {
   right: 5px;
 }
 .me-photos .gameboy-frame-wrapper .arrow:hover, .me-photos .gameboy-frame-wrapper .arrow:focus {
+  transform: translateY(-50%);
   animation: wiggle 0.5s forwards;
 }
 .me-photos .gameboy-frame-wrapper .arrow:hover svg, .me-photos .gameboy-frame-wrapper .arrow:focus svg {
