--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -79,6 +79,9 @@
         font-size: 20px;
         margin-top: 20px;
         line-height: 1.6;
+        strong {
+            font-weight: 550;
+        }
     }
     .about-top {
         display: flex;
