--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -162,31 +162,45 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            img {
+            .base-icon {
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
                 display: block;
                 transition: 0.3s ease-in-out;
+                z-index: 0;
+            }
+            .focus-overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                opacity: 0;
+                z-index: 3;
+                transition: opacity 0.3s ease-in-out;
+                pointer-events: none;
             }
             &::after {
                 content: "";
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                width: 86%;
-                height: 86%;
+                width: 60%;
+                height: 60%;
                 border-radius: 5%;
-                background-color: rgba(14, 16, 61, 0);
+                background-color: rgba(255, 255, 255, 0);
                 transition: background-color 0.3s ease-in-out;
                 z-index: 1;
                 transform: translate(-50%, -50%);
             }
             p {
                 font-family: "Space Grotesk", sans-serif;
-                color: $white;
-                font-size: 15px;
-                line-height: 1.4;
+                color: $navy;
+                font-size: 12px;
+                line-height: 1.1;
+                letter-spacing: -0.5px;
                 text-align: center;
                 position: absolute;
                 top: 30%;
@@ -199,7 +213,10 @@
             }
             &:hover {
                 &::after {
-                    background-color: rgba(14, 16, 61, 0.8);
+                    background-color: rgba(255, 255, 255, 0.8);
+                }
+                .focus-overlay {
+                    opacity: 1;
                 }
                 p {
                     opacity: 1;
