--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -540,32 +540,47 @@ body {
   align-items: center;
   justify-content: center;
 }
-.about-me .about-bottom .skill-item img {
+.about-me .about-bottom .skill-item .base-icon {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
   display: block;
   transition: 0.3s ease-in-out;
+  z-index: 0;
+}
+.about-me .about-bottom .skill-item .focus-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  opacity: 0;
+  z-index: 3;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none;
 }
 .about-me .about-bottom .skill-item::after {
   content: "";
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 86%;
-  height: 86%;
+  width: 60%;
+  height: 60%;
   border-radius: 5%;
-  background-color: rgba(14, 16, 61, 0);
+  background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.3s ease-in-out;
   z-index: 1;
   transform: translate(-50%, -50%);
 }
 .about-me .about-bottom .skill-item p {
   font-family: "Space Grotesk", sans-serif;
-  color: #f5f5f5;
-  font-size: 15px;
-  line-height: 1.4;
+  color: #0e103d;
+  font-size: 12px;
+  line-height: 1.1;
+  letter-spacing: -0.5px;
   text-align: center;
   position: absolute;
   top: 30%;
@@ -577,7 +592,10 @@ body {
   pointer-events: none;
 }
 .about-me .about-bottom .skill-item:hover::after {
-  background-color: rgba(14, 16, 61, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.about-me .about-bottom .skill-item:hover .focus-overlay {
+  opacity: 1;
 }
 .about-me .about-bottom .skill-item:hover p {
   opacity: 1;
