--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -198,9 +198,10 @@
             p {
                 font-family: "Space Grotesk", sans-serif;
                 color: $navy;
-                font-size: 12px;
+                font-size: 14px;
                 line-height: 1.1;
                 letter-spacing: -0.5px;
+                font-weight: 550;
                 text-align: center;
                 position: absolute;
                 top: 30%;
@@ -210,6 +211,9 @@
                 opacity: 0;
                 transition: opacity 0.3s ease-in-out;
                 pointer-events: none;
+                background: $pink;
+                padding: 5px 5px;
+                border-radius: 10px;
             }
             &:hover {
                 &::after {
