--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -578,9 +578,10 @@ body {
 .about-me .about-bottom .skill-item p {
   font-family: "Space Grotesk", sans-serif;
   color: #0e103d;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.1;
   letter-spacing: -0.5px;
+  font-weight: 550;
   text-align: center;
   position: absolute;
   top: 30%;
@@ -590,6 +591,9 @@ body {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
+  background: #e2b4bd;
+  padding: 5px 5px;
+  border-radius: 10px;
 }
 .about-me .about-bottom .skill-item:hover::after {
   background-color: rgba(255, 255, 255, 0.8);
