--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -197,7 +197,7 @@
             }
             p {
                 font-family: "Space Grotesk", sans-serif;
-                color: $navy;
+                color: $white-hover;
                 font-size: 14px;
                 line-height: 1.1;
                 letter-spacing: -0.5px;
