--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -577,7 +577,7 @@ body {
 }
 .about-me .about-bottom .skill-item p {
   font-family: "Space Grotesk", sans-serif;
-  color: #0e103d;
+  color: #cbcfda;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: -0.5px;
