--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -570,14 +570,14 @@ body {
   width: 60%;
   height: 60%;
   border-radius: 5%;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(203, 207, 218, 0);
   transition: background-color 0.3s ease-in-out;
   z-index: 1;
   transform: translate(-50%, -50%);
 }
 .about-me .about-bottom .skill-item p {
   font-family: "Space Grotesk", sans-serif;
-  color: #cbcfda;
+  color: #0e103d;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: -0.5px;
@@ -596,7 +596,7 @@ body {
   border-radius: 10px;
 }
 .about-me .about-bottom .skill-item:hover::after {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(203, 207, 218, 0.8235294118);
 }
 .about-me .about-bottom .skill-item:hover .focus-overlay {
   opacity: 1;
