project card implementation, two added. need to add more

--- a/kac-portfolio/src/style/sass/_footer.scss
+++ b/kac-portfolio/src/style/sass/_footer.scss
@@ -11,3 +11,9 @@
     font-family: "Space Grotesk", sans-serif;
     font-size: 12px;
 }
+
+a {
+    &:hover, &:focus {
+        text-decoration: underline;
+    }
+}
