--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -68,10 +68,10 @@
     }
 }
 .about-me {
-    padding-left: 220px;
-    padding-right: 220px;
-    padding-top: 30px;
-    padding-bottom: 80px;
+    padding-left: 8vw;
+    padding-right: 8vw;
+    padding-top: .3vh;
+    padding-bottom: .8vh;
     h1 {
         font-family: "VT323", monospace;
         color: $green;
