--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -447,10 +447,10 @@ body {
   }
 }
 .about-me {
-  padding-left: 220px;
-  padding-right: 220px;
-  padding-top: 30px;
-  padding-bottom: 80px;
+  padding-left: 8vw;
+  padding-right: 8vw;
+  padding-top: 0.3vh;
+  padding-bottom: 0.8vh;
 }
 .about-me h1 {
   font-family: "VT323", monospace;
@@ -617,4 +617,99 @@ body {
   width: 100%;
   font-family: "Space Grotesk", sans-serif;
   font-size: 12px;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding-left: 8vw;
+  padding-right: 8vw;
+  padding-top: 0.3vh;
+  padding-bottom: 0.8vh;
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: inherit;
+  background: #0e103d;
+  border-radius: 5px;
+  border: 2px solid #50526a;
+  overflow: hidden;
+  box-shadow: 0 4px 5px rgba(14, 16, 61, 0.2117647059);
+  transition: transform 0.2s ease;
+  text-decoration: none;
+}
+
+.project-image {
+  position: relative;
+  overflow: hidden;
+  height: 15vh;
+}
+
+.project-image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+
+.project-dates {
+  position: absolute;
+  top: 1vh;
+  right: 1vh;
+  background: #69306d;
+  color: #f5f5f5;
+  padding: 0.3rem 0.6rem;
+  font-size: 0.8rem;
+  border-radius: 5px;
+}
+
+.project-card h3 {
+  margin: 1rem;
+  font-size: 1.5rem;
+  color: #f5f5f5;
+  font-family: "VT323", monospace;
+  text-decoration-color: #f5f5f5;
+}
+
+.project-card p {
+  margin: 0 1rem 1rem;
+  font-size: 0.95rem;
+  color: #cbcfda;
+  font-family: "Space Grotesk", sans-serif;
+}
+
+.project-tags {
+  margin: 0 1rem 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.tag {
+  color: #0e103d;
+  padding: 0.3rem 0.6rem;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  font-family: "VT323", monospace;
+}
+
+.tag.pink {
+  background-color: #e2b4bd;
+}
+
+.tag.blue {
+  background-color: #70a0af;
+}
+
+.tag.green {
+  background-color: #9caf5e;
 }/*# sourceMappingURL=style.css.map */
