--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -211,7 +211,7 @@
                 opacity: 0;
                 transition: opacity 0.3s ease-in-out;
                 pointer-events: none;
-                background: $pink;
+                background: $green;
                 padding: 5px 5px;
                 border-radius: 10px;
             }
