--- a/kac-portfolio/src/style/style.css
+++ b/kac-portfolio/src/style/style.css
@@ -591,7 +591,7 @@ body {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
-  background: #e2b4bd;
+  background: #9caf5e;
   padding: 5px 5px;
   border-radius: 10px;
 }
