changed programming links, added favicon

--- a/kac-portfolio/src/style/sass/_about.scss
+++ b/kac-portfolio/src/style/sass/_about.scss
@@ -73,19 +73,16 @@
     padding-top: .3vh;
     padding-bottom: .8vh;
     h1 {
-        font-family: "VT323", monospace;
+        @include vt-font(48px);
         color: $green;
-        font-size: 48px;
     }
     h2 {
-        font-family: "VT323", monospace;
+        @include vt-font(48px);
         color: $purple;
-        font-size: 48px;
     }
     p {
-        font-family: "Space Grotesk", sans-serif;
+        @include sg-font(20px);
         color: $navy;
-        font-size: 20px;
         margin-top: 20px;
         line-height: 1.6;
         strong {
@@ -196,9 +193,8 @@
                 transform: translate(-50%, -50%);
             }
             p {
-                font-family: "Space Grotesk", sans-serif;
+                @include sg-font(14px);
                 color: $navy;
-                font-size: 14px;
                 line-height: 1.1;
                 letter-spacing: -0.5px;
                 font-weight: 550;
