--- a/kac-portfolio/src/style/sass/_footer.scss
+++ b/kac-portfolio/src/style/sass/_footer.scss
@@ -7,8 +7,7 @@
     gap: 20px;
     justify-content: center;
     width: 100%;
-    font-family: "Space Grotesk", sans-serif;
-    font-size: 12px;
+    @include sg-font(12px);
 }
 
 a {
