--- a/kac-portfolio/src/style/sass/_mixins.scss
+++ b/kac-portfolio/src/style/sass/_mixins.scss
@@ -1,12 +1,10 @@
-@mixin os-font($size:20px) {
+@mixin vt-font($size:32px) {
     font-size: $size;
-    font-weight: 400;
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: "VT323", monospace;
 }
-@mixin rm-font($size:28px) {
+@mixin sg-font($size:24px) {
     font-size: $size;
-    font-weight: 800;
-    font-family: 'Roboto Mono', monospace;
+    font-family: "Space Grotesk", sans-serif;
 }
 
 @mixin respond($breakpoint) {
