--- a/kac-portfolio/src/style/sass/_projects.scss
+++ b/kac-portfolio/src/style/sass/_projects.scss
@@ -41,6 +41,13 @@
     display: block;
 }
 
+.project-image.top img {
+    object-position: top;
+}
+.project-image.top15 img {
+    object-position: 0 15%;
+}
+
 @keyframes wiggle {
     0% { transform: rotate(0deg); }
     25% { transform: rotate(3deg); }
